# testing-ghcjs

./: README.md  testing-ghcjs.cabal
src/: Main.hs
src/Test/: GHCJS.hs
src/Test/GHCJS/: Internal.hs
test/Test/: GHCJSSpec.hs
