Name:                   testing-ghcjs
Version:                0.0.0
Author:                 kevin cotrone <kevincotrone@gmail.com>
Maintainer:             kevin cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

executable testing-ghcjs
  main-is:              Main.hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5
                      , aeson >= 0.8.0.0
                      , ghcjs-base 
                      , ghcjs-dom
                      , mtl
                      , shakespeare
                      , blaze-html
                      , text



Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
